Fix z-index on Top button with Overlay opened

--- a/wp-content/themes/tomle/less/override/custom.less
+++ b/wp-content/themes/tomle/less/override/custom.less
@@ -966,7 +966,7 @@ nav.navbar {
 	@media (max-width: @screen-sm) {
 		.container {
 			width: 90%;
-		}
+		} 
 	}
 }
 
@@ -990,15 +990,15 @@ nav.navbar {
  	color: #fff; 
  	font-size: 10px;
  	text-transform: uppercase;
- 	z-index: 9999;
+ 	z-index: 99;  
  	opacity: 0;
  	padding: 10px 10px 16px;
  	-webkit-border-radius: 60px;
     -moz-border-radius: 60px;
  	border-radius: 60px;
- 	line-height: 1;
+ 	line-height: 1;  
  	width: 68px;
- 	background-color: rgba(0,0,0,0.2);
+ 	background-color: rgba(0,0,0,0.2); 
  	cursor: pointer;
  	transition: all .2s ease-in-out;
  	-webkit-transition: all .2s ease-in-out;
